@@ -2,6 +2,9 @@ HBase Async - User visible changes.
 
 * Version 1.4.0 (2012-??-??) [???????]
 
+  - Fixed an RPC serialization bug when batching whole-row deletes.
+    See issue #25.
+
 * Version 1.3.2 (2012-07-10) [2af9f55]
 
 Noteworthy changes:
